Adapted getAverageMetricsByInterval to retrieve the metrics in the correct format