@@ -8,14 +8,17 @@ import com.sramiro.factorial.domain.enums.Interval;
 import com.sramiro.factorial.domain.model.Metric;
 import com.sramiro.factorial.domain.views.AverageMetricView;
 import com.sramiro.factorial.infraestructure.rest.api.dto.request.CreateMetricRequest;
-import com.sramiro.factorial.infraestructure.rest.api.dto.response.AverageMetricResponse;
 import com.sramiro.factorial.infraestructure.rest.api.dto.response.MetricResponse;
 import com.sramiro.factorial.infraestructure.rest.api.mapper.MetricControllerMapper;
 import com.sramiro.factorial.infraestructure.rest.spec.MetricControllerSpec;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.time.format.DateTimeFormatter;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -39,19 +42,18 @@ public class MetricController implements MetricControllerSpec {
     }
 
     @Override
-    public List<AverageMetricResponse> getAverageMetricsByInterval(String interval) {
+    public List<Map<String, Object>> getAverageMetricsByInterval(String interval) {
         List<AverageMetricView> metrics = getAverageMetricsByIntervalUseCase.getAverageMetricsByInterval(Interval.valueOf(interval.toUpperCase()));
-//        metrics.stream()
-//                .collect(Collectors.groupingBy(am -> am.getPeriod().format(DateTimeFormatter.ofPattern("MM-dd HH:mm"))))
-//                .entrySet().stream()
-//                .map(entry -> {
-//                    Map<String, Object> map = new LinkedHashMap<>();
-//                    map.put("time", entry.getKey());
-//                    entry.getValue().forEach(am -> map.put(am.getName(), am.getAverage()));
-//                    return map;
-//                })
-//                .collect(Collectors.toList());
-        return mapper.toListOfAverageMetricsResponse(metrics);
+        return metrics.stream()
+                .collect(Collectors.groupingBy(am -> am.getPeriod().format(DateTimeFormatter.ofPattern("MM-dd HH:mm"))))
+                .entrySet().stream()
+                .map(entry -> {
+                    Map<String, Object> map = new LinkedHashMap<>();
+                    map.put("time", entry.getKey());
+                    entry.getValue().forEach(am -> map.put(am.getName(), am.getAverage()));
+                    return map;
+                })
+                .toList();
     }
 
     @Override
